force-app/main/default/objects/Inventory_Tracking__c/Inventory_Tracking__c.object-meta.xml
<CustomObject>
    <description>This object is used with the Receive Material button on the Purchase Order.  You can receive inventory against individual Purchase Order Lines.</description>
    <label>BT PO Inventory Tracking</label>
    <nameField>
        <displayFormat>INVT-{0000}</displayFormat>
        <label>Inventory #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT PO Inventory Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>