force-app/main/default/objects/Inventory_Tracking__c/fields/BT_Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>BT_Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Purchase Order line that was used to create the Inventory Tracking record.</inlineHelpText>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>BT PO Inventory Tracking</relationshipLabel>
    <relationshipName>BT_Inventory_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>