force-app/main/default/objects/Inventory_Tracking__c/fields/New_Quantity__c.field-meta.xml
<CustomField>
    <fullName>New_Quantity__c</fullName>
    <inlineHelpText>This is the Quantity Received field from the PO Line.</inlineHelpText>
    <label>Received Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>