force-app/main/default/objects/Inventory_Tracking__c/fields/Old_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Old_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This comes from the Available Quantity on the Product record.</inlineHelpText>
    <label>Old Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>