force-app/main/default/objects/Inventory_Tracking__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>Inventory_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>