force-app/main/default/objects/Inventory_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Old_Quantity__c</columns>
    <columns>New_Quantity__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Quote__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>